[workspace]
members = [
    "bytecheck",
    "bytecheck_derive",
    "bytecheck_test",
]
resolver = "2"

[workspace.package]
version = "0.6.11"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/bytecheck"
repository = "https://github.com/rkyv/bytecheck"

[workspace.dependencies]
proc-macro2 = { version = "1.0", default-features = false }
ptr_meta = { version = "0.3.0-pre1", default-features = false }
rancor = { version = "0.1.0-pre8", default-features = false }
simdutf8 = { version = "0.1", default-features = false }
syn = { version = "2.0", features = ["full"] }
uuid = { version = "1.4", default-features = false }
quote = { version = "1.0", default-features = false }
