[workspace]
resolver = "2"
members = [
    "bytecheck",
    "bytecheck_derive",
    "bytecheck_test",
]

[workspace.package]
version = "0.6.12"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/bytecheck"
repository = "https://github.com/djkoloski/bytecheck"

[workspace.dependencies]
proc-macro2 = { version = "1.0", default-features = false }
ptr_meta = { version = "0.2", default-features = false }
simdutf8 = { version = "0.1", default-features = false }
syn = { version = "1.0", default-features = false }
uuid = { version = "1.4", default-features = false }
quote = { version = "1.0", default-features = false }
